# trello-clone-scaler

./: .gitignore  README.md
.emergent/: emergent.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/routes/: boards.py  cards.py  checklists.py  comments.py  labels.py  lists.py  search.py  users.py
backend/db/: init_db.py  schema.sql  seed.sql
backend/tests/: conftest.py  test_boards.py  test_cards.py  test_checklists.py  test_lists.py  test_misc.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/__tests__/: CardItem.test.jsx  Header.test.jsx  HomePage.test.jsx
frontend/src/api/: api.js
frontend/src/components/BoardView/: CardItem.jsx
frontend/src/components/CardDetail/: CardDetailModal.jsx
frontend/src/components/Header/: Header.jsx
frontend/src/pages/: BoardPage.jsx  HomePage.jsx
memory/: PRD.md
test_reports/: iteration_1.json
